# merchwireanalytics

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/api/: main.py
app/db/: migrate.py  schema.sql  session.py
app/email/: render.py  template.mjml
app/infra/: Procfile  docker-compose.yml
app/ingest/: __init__.py  brands.yml  meta_ads.py  models.py  shopify.py
app/jobs/: celery_app.py  daily.py  weekly.py
app/logic/: charts.py  daily.py  export_csv.py  ranking.py  signals.py
app/utils/: dates.py  esp.py  rate_limit.py  retry.py  urls.py
app/web/: index.html  styles.css
scripts/: seed.py  send_test_email.py
tests/: conftest.py  test_e2e.py  test_ingest.py  test_ranking.py  test_signals.py
tests/fixtures/http/meta/: hexco.json  lumithreads.json
tests/fixtures/http/shopify/: alpha-serum.js  aurora-tee.js  hexco_sitemap.xml  lumithreads_sitemap.xml
